cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("cli-${base}" "${source}")
    set_property(TARGET "cli-${base}" PROPERTY CXX_STANDARD 17)
    target_link_libraries("cli-${base}" "cli")
    add_test("cli-${base}" "cli-${base}")
endforeach()
